--- a/README
+++ b/README
@@ -43,9 +43,9 @@ source ~/.bashrc
 
 catkin build -DCATKIN_ENABLE_TESTING=0 -j $(expr `nproc` / 2)
 
+source ./devel/setup.bash
 
-
-
+roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true world:=simple_office_with_people
 
 
 
