--- a/README
+++ b/README
@@ -39,11 +39,12 @@ rosdep update --include-eol-distros
 
 rosdep install --from-paths src --ignore-src -y --rosdistro melodic --skip-keys="opencv2 opencv2-nonfree pal_laser_filters speed_limit_node sensor_to_cloud hokuyo_node libdw-dev python-graphitesend-pip python-statsd pal_filters pal_vo_server pal_usb_utils pal_pcl pal_pcl_points_throttle_and_filter pal_karto pal_local_joint_control camera_calibration_files pal_startup_msgs pal-orbbec-openni2 dummy_actuators_manager pal_local_planner gravity_compensation_controller current_limit_controller dynamic_footprint dynamixel_cpp tf_lookup opencv3 joint_impedance_trajectory_controller cartesian_impedance_controller omni_base_description omni_drive_controller pal_moveit_capabilities pal_moveit_plugins pal_loc_measure pal_map_manager ydlidar_ros_driver"
 
-source ~/.bashrc
-
 catkin build -DCATKIN_ENABLE_TESTING=0 -j $(expr `nproc` / 2)
 
-source ./devel/setup.bash  #test 
+# test in new terminal
+echo "source ~/tiago_public_ws/devel/setup.bash" >> ~/.bashrc
+
+gnome-terminal  
 
 roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true world:=simple_office_with_people
 
